--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,31 @@
 		},
 		"ghcr.io/azure/azure-dev/azd:0": {
 			"version": "stable"
-		}
+		},
+		"extensions": [
+			"apidev.azure-api-center",
+			"github.codespaces",
+			"github.copilot",
+			"github.copilot-chat",
+			"github.github-vscode-theme",
+			"github.vscode-github-actions",
+			"github.vscode-pull-request-github",
+			"humao.rest-client",
+			"ms-azuretools.azure-dev",
+			"ms-azuretools.vscode-azureappservice",
+			"ms-azuretools.vscode-azurecontainerapps",
+			"ms-azuretools.vscode-azurefunctions",
+			"ms-azuretools.vscode-azureresourcegroups",
+			"ms-azuretools.vscode-azurestaticwebapps",
+			"ms-azuretools.vscode-azurestorage",
+			"ms-azuretools.vscode-azurevirtualmachines",
+			"ms-azuretools.vscode-bicep",
+			"ms-azuretools.vscode-cosmosdb",
+			"ms-dotnettools.vscode-dotnet-runtime",
+			"ms-graph.kiota",
+			"ms-vscode.azure-account",
+			"ms-vscode.azurecli",
+			"ms-vscode.vscode-node-azure-pack"
+		]
 	}
 }
